Split CustomerClient script for frontend validation into three seperate scripts-app,controller and service. Also, a bit of polish in the code through out all projects.

--- a/CompanyEFDataManager/CompanyEFDataManager.csproj
+++ b/CompanyEFDataManager/CompanyEFDataManager.csproj
@@ -154,6 +154,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\Controllers\CustomerController.js" />
+    <Content Include="app\Services\CustomerService.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -186,7 +188,7 @@
       <LastGenOutput>CustomerModel.cs</LastGenOutput>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
-    <Content Include="Scripts\CustomerClient.js" />
+    <Content Include="app\CustomerClient.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
